--- a/src/index.html
+++ b/src/index.html
@@ -274,14 +274,14 @@
               <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
                 Fa2Bee Inc.
               </h2>
-              <p class="font-light my-5">
+              <p class="font-light text-sm my-5">
                 Fa2Bee Inc. is a vibrant and innovative company that offers a
                 range of services to meet your needs. Whether it's our
                 meticulous cleaning service, creative kids salon, or convenient
                 laundry solutions, we are committed to providing top-notch
                 quality, reliability, and customer satisfaction.
               </p>
-              <p class="font-light my-5">
+              <p class="font-light text-sm my-5">
                 At Fa2Bee Inc., we value your time and strive to make your life
                 easier, leaving you with more time to focus on what matters
                 most. Join us and discover the convenience, style, and
@@ -311,14 +311,14 @@
               <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
                 Fatou B Ceesay
               </h2>
-              <p class="font-light my-5">
+              <p class="font-light text-sm my-5">
                 From humble beginnings in The Gambia, Fatou B Ceesay has defied
                 the odds to become a successful and inspiring entrepreneur. With
                 a strong business acumen and creative vision, she has
                 established a range of ventures, including a salon, cleaning
                 business, and doll line.
               </p>
-              <p class="font-light my-5">
+              <p class="font-light text-sm my-5">
                 Through her dedication to empowerment and representation,
                 particularly for black children, Fatou has left an indelible
                 mark on the global business stage. Her story of resilience and
