--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
             ></i>
           </div>
           <!-- sidenav content -->
-          <div class="p-2 flex flex-col">
+          <div class="p-2 flex flex-col sideNavContent">
             <a href="#top" class="p-2 px-3 text-sm block w-full">Home</a>
             <a
               href="#aboutus"
@@ -246,7 +246,7 @@
       </div>
 
       <!-- about us -->
-      <section class="p-5 pb-14 xl:p-20 pt-0" id="aboutus">
+      <section class="p-5 py-14 xl:p-20" id="aboutus">
         <h1
           class="text-center mb-7 text-beeYellow font-bold text-2xl md:text-3xl xl:text-4xl"
         >
