scroll to top added

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,11 @@
     <link rel="stylesheet" href="css/personalStyles.css" />
     <link href="style.css" rel="stylesheet" />
 
-    <title>Fa2Bee</title>
-    <meta name="description" content="Fa2Bee Inc." />
+    <title>Fa2Bee Inc.</title>
+    <meta
+      name="description"
+      content="Fa2Bee Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
+    />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 
     <meta name="author" content="Steps Keita" />
@@ -36,7 +39,10 @@
       property="og:url"
       content="https://peaceful-muffin-848fc4.netlify.app/"
     />
-    <meta property="og:description" content="Fa2Bee Inc." />
+    <meta
+      property="og:description"
+      content="Fa2Bee Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
+    />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Fa2Bee" />
   </head>
@@ -52,12 +58,8 @@
         <img src="img/logo-white.png" alt="" class="h-11 object-scale-down" />
       </a>
       <!-- side -->
-      <div
-        class="fixed top-0 right-0 bottom-0 left-0 justify-end hidden sideNav"
-      >
-        <div
-          class="bg-customDark w-fit h-full transition-all duration-300 animate__animated animate__slideInRight"
-        >
+      <div class="fixed top-0 right-0 bottom-0 left-0 justify-end sideNav">
+        <div class="bg-customDark w-fit h-full">
           <!-- sidenav btn -->
           <div class="flex justify-end items-center p-3 py-5">
             <i
@@ -570,6 +572,13 @@
         reserved.
       </p>
     </footer>
+
+    <button
+      type="button"
+      class="bg-beeYellow w-10 h-10 rounded-full fixed -right-10 bottom-4 flex items-center justify-center text-customDark hover:bg-customDark hover:text-beeYellow hover:border hover:border-beeYellow transition-all duration-500 scrollToTop"
+    >
+      <i class="fa-solid fa-chevron-up text-inherit"></i>
+    </button>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
     <script
       type="text/javascript"
