scroll to top added

--- a/src/index.html
+++ b/src/index.html
@@ -58,38 +58,39 @@
         <img src="img/logo-white.png" alt="" class="h-11 object-scale-down" />
       </a>
       <!-- side -->
-      <div class="fixed top-0 right-0 bottom-0 left-0 justify-end sideNav">
-        <div class="bg-customDark w-fit h-full">
-          <!-- sidenav btn -->
-          <div class="flex justify-end items-center p-3 py-5">
-            <i
-              class="fa-solid fa-times fa-xl cursor-pointer text-beeYellow sideNavCloseBtn"
-            ></i>
-          </div>
-          <!-- sidenav content -->
-          <div class="p-2 flex flex-col sideNavContent">
-            <a href="#top" class="p-2 px-3 text-sm block w-full">Home</a>
-            <a
-              href="#aboutus"
-              class="p-2 px-3 text-sm block w-full active:border-beeYellow"
-              >About</a
-            >
-            <a
-              href="#services"
-              class="p-2 px-3 text-sm block w-full active:border-beeYellow"
-              >Services</a
-            >
-            <a
-              href="#testimonials"
-              class="p-2 px-3 text-sm block w-full active:border-beeYellow"
-              >Testimonials</a
-            >
-            <a
-              href="#contact"
-              class="p-2 px-3 text-sm block w-full active:border-beeYellow"
-              >Contact</a
-            >
-          </div>
+
+      <div
+        class="fixed top-0 right-0 bg-customDark w-fit h-full transition-all duration-500 sideNav"
+      >
+        <!-- sidenav btn -->
+        <div class="flex justify-end items-center p-3 py-5">
+          <i
+            class="fa-solid fa-times fa-xl cursor-pointer text-beeYellow sideNavCloseBtn"
+          ></i>
+        </div>
+        <!-- sidenav content -->
+        <div class="p-2 flex flex-col sideNavContent">
+          <a href="#top" class="p-2 px-3 text-sm block w-full">Home</a>
+          <a
+            href="#aboutus"
+            class="p-2 px-3 text-sm block w-full active:border-beeYellow"
+            >About</a
+          >
+          <a
+            href="#services"
+            class="p-2 px-3 text-sm block w-full active:border-beeYellow"
+            >Services</a
+          >
+          <a
+            href="#testimonials"
+            class="p-2 px-3 text-sm block w-full active:border-beeYellow"
+            >Testimonials</a
+          >
+          <a
+            href="#contact"
+            class="p-2 px-3 text-sm block w-full active:border-beeYellow"
+            >Contact</a
+          >
         </div>
       </div>
       <!-- desktop menu -->
