scroll to top added

--- a/src/index.html
+++ b/src/index.html
@@ -536,7 +536,7 @@
               />
               <input
                 type="text"
-                placeholder="Email"
+                placeholder="Phone"
                 class="bg-customDark p-3 text-gray-400 focus:border-beeYellow outline-none border-b border-gray-50 lg:ml-2 my-3 w-full flex-1"
               />
             </div>
