countup and reveal animation added

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,11 @@
       name="description"
       content="Fa2Bee Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
     />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="https://peaceful-muffin-848fc4.netlify.app/img/favicon.png"
+      type="image/x-icon"
+    />
 
     <meta name="author" content="Steps Keita" />
     <meta property="og:title" content="Fa2Bee" />
@@ -586,9 +590,17 @@
       src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
     ></script>
     <script src="js/testimonials.js"></script>
-    <script src="js/countUp.js"></script>
 
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-countto/1.2.0/jquery.countTo.min.js"
+      integrity="sha512-RXuJVZbGztKGYMNgmWU6oOHbUwYu+NnzovhT4lyW1kfmEfRK6CD1xL8U+0xACFqSkC3cxMugaaNEP8wWmvl4Jw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="js/countUp.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
     <script src="owl-carousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
   </body>
