fatou b ceesay page structured

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
     <link rel="stylesheet" href="css/personalStyles.css" />
     <link href="style.css" rel="stylesheet" />
 
-    <title>Fa2Bee Inc.</title>
+    <title>FA2BEE Inc.</title>
     <meta
       name="description"
-      content="Fa2Bee Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
+      content="FA2BEE Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
     />
     <link
       rel="shortcut icon"
@@ -36,7 +36,7 @@
     />
 
     <meta name="author" content="Steps Keita" />
-    <meta property="og:title" content="Fa2Bee" />
+    <meta property="og:title" content="FA2BEE" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/logo.png" />
     <meta
@@ -45,10 +45,10 @@
     />
     <meta
       property="og:description"
-      content="Fa2Bee Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
+      content="FA2BEE Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
     />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="Fa2Bee" />
+    <meta property="og:site_name" content="FA2BEE" />
   </head>
   <body>
     <!-- very top -->
@@ -186,7 +186,7 @@
                   data-wow-duration="5s"
                   data-wow-delay="3s"
                 >
-                  <span class="font-thin text-beeYellow mx-2">Fa2Bee</span>
+                  <span class="font-thin text-beeYellow mx-2">FA2BEE</span>
                   <span class="font-extrabold mx-2">Inc</span>
                 </h2>
                 <div
@@ -279,20 +279,20 @@
             </div>
             <div class="flex-1 p-5">
               <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
-                Fa2Bee Inc.
+                FA2BEE Inc.
               </h2>
               <p class="font-light text-sm my-5">
-                Fa2Bee Inc. is a vibrant and innovative company that offers a
+                FA2BEE Inc. is a vibrant and innovative company that offers a
                 range of services to meet your needs. Whether it's our
                 meticulous cleaning service, creative kids salon, or convenient
                 laundry solutions, we are committed to providing top-notch
                 quality, reliability, and customer satisfaction.
               </p>
               <p class="font-light text-sm my-5">
-                At Fa2Bee Inc., we value your time and strive to make your life
+                At FA2BEE Inc., we value your time and strive to make your life
                 easier, leaving you with more time to focus on what matters
                 most. Join us and discover the convenience, style, and
-                excellence that Fa2Bee Inc. brings to your everyday life.
+                excellence that FA2BEE Inc. brings to your everyday life.
               </p>
 
               <a
@@ -334,7 +334,7 @@
               </p>
 
               <a
-                href=""
+                href="fatou-b-ceesay.html"
                 class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
                 data-wow-duration="7s"
                 data-wow-delay="5s"
@@ -480,7 +480,7 @@
               </h2>
               <ul class="list-none">
                 <li>Phone : + 220 2511115/ 2611116</li>
-                <li>Email : info@riahbeelaundry.com</li>
+                <li>Email : info@fa2beeinc.com</li>
               </ul>
             </div>
             <div class="my-4">
@@ -573,7 +573,7 @@
     <footer class="flex items-center justify-center text-center p-3">
       <p class="text-sm xl:text-lg text-gray-300">
         Copyright &copy; <span class="footerDate"></span>
-        <a href="" class="text-beeYellow underline">Fa2Bee Inc.</a> All rights
+        <a href="" class="text-beeYellow underline">FA2BEE Inc.</a> All rights
         reserved.
       </p>
     </footer>
