fatou b ceesay page structured

--- a/src/fatou-b-ceesay.html
+++ b/src/fatou-b-ceesay.html
@@ -73,24 +73,24 @@
         </div>
         <!-- sidenav content -->
         <div class="p-2 flex flex-col sideNavContent">
-          <a href="#top" class="p-2 px-3 text-sm block w-full">Home</a>
+          <a href="index.html" class="p-2 px-3 text-sm block w-full">Home</a>
           <a
-            href="#aboutus"
+            href="index.html#aboutus"
             class="p-2 px-3 text-sm block w-full active:border-beeYellow"
             >About</a
           >
           <a
-            href="#services"
+            href="index.html#services"
             class="p-2 px-3 text-sm block w-full active:border-beeYellow"
             >Services</a
           >
           <a
-            href="#testimonials"
+            href="index.html#testimonials"
             class="p-2 px-3 text-sm block w-full active:border-beeYellow"
             >Testimonials</a
           >
           <a
-            href="#contact"
+            href="index.html#contact"
             class="p-2 px-3 text-sm block w-full active:border-beeYellow"
             >Contact</a
           >
@@ -142,7 +142,11 @@
             class="w-full"
           />
         </div>
-        <div class="flex-1 p-3 px-10 xl:px-16">
+        <div
+          class="flex-1 p-3 px-10 xl:px-16 animate__animated animate__slideInRight"
+          data-wow-duration="5s"
+          data-wow-delay="4s"
+        >
           <div class="flex justify-end">
             <img
               src="img/fatou-b/vitamins-circle.png"
@@ -178,7 +182,11 @@
       <section
         class="flex flex-col xl:flex-row items-stretch px-10 xl:px-16 bg-customBlack"
       >
-        <div class="flex-1">
+        <div
+          class="flex-1 animate__animated animate__slideInLeft"
+          data-wow-duration="5s"
+          data-wow-delay="3s"
+        >
           <p class="font-light my-3 p-3">
             Amidst her entrepreneurial pursuits, Fatou engages in personal
             projects such as crocheting and content creation, all while
@@ -196,7 +204,11 @@
             />
           </div>
         </div>
-        <div class="flex-1">
+        <div
+          class="flex-1 animate__animated animate__slideInUp"
+          data-wow-duration="5s"
+          data-wow-delay="3s"
+        >
           <div class="font-light my-5 p-3">
             <p>
               The narrative concludes with Fatou's future aspirations to become
