--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,7 @@
     <main id="top">
       <!-- carousel -->
       <section
+        id="showcase"
         class="relative h-[93vh]"
         data-te-carousel-init
         data-te-carousel-slide
