--- a/src/fatou-b-ceesay.html
+++ b/src/fatou-b-ceesay.html
@@ -26,7 +26,9 @@
     <title>Fatou B. Ceesay (FA2BEE)</title>
     <meta
       name="description"
-      content="FA2BEE Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
+      content="Unbreakable Dreams: From Africa to the World is an autobiography
+      by Fatou B Ceesay, chronicling her remarkable journey from The
+      Gambia to achieving entrepreneurial success."
     />
     <link
       rel="shortcut icon"
@@ -35,16 +37,21 @@
     />
 
     <meta name="author" content="Steps Keita" />
-    <meta property="og:title" content="FA2BEE" />
+    <meta property="og:title" content="Fatou B Ceesay (FA2BEE)" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="img/logo.png" />
+    <meta
+      property="og:image"
+      content="https://peaceful-muffin-848fc4.netlify.app/img/banner/fa2bee.png"
+    />
     <meta
       property="og:url"
       content="https://peaceful-muffin-848fc4.netlify.app/"
     />
     <meta
       property="og:description"
-      content="FA2BEE Inc. is a vibrant and innovative company that offers a range of services to meet your needs. Whether it's our meticulous cleaning service, creative kids salon, or convenient laundry solutions, we are committed to providing top-notch quality, reliability, and customer satisfaction."
+      content="Unbreakable Dreams: From Africa to the World is an autobiography
+      by Fatou B Ceesay, chronicling her remarkable journey from The
+      Gambia to achieving entrepreneurial success."
     />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="FA2BEE" />
@@ -75,12 +82,12 @@
         <div class="p-2 flex flex-col sideNavContent">
           <a href="index.html" class="p-2 px-3 text-sm block w-full">Home</a>
           <a
-            href="index.html#aboutus"
+            href="about.html"
             class="p-2 px-3 text-sm block w-full active:border-beeYellow"
             >About</a
           >
           <a
-            href="index.html#services"
+            href="services.html"
             class="p-2 px-3 text-sm block w-full active:border-beeYellow"
             >Services</a
           >
@@ -109,12 +116,12 @@
           >Home</a
         >
         <a
-          href="index.html"
+          href="about.html"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 active:border-beeYellow"
           >About</a
         >
         <a
-          href="index.html#services"
+          href="services.html"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 active:border-beeYellow"
           >Services</a
         >
@@ -134,7 +141,7 @@
     <!-- main content -->
     <main>
       <!-- showcase -->
-      <section class="flex flex-col xl:flex-row items-stretch xl:p-16">
+      <section class="flex flex-col xl:flex-row xl:items-stretch xl:p-16">
         <div class="">
           <img
             src="img/fatou-b/circle-design-yellow.png"
@@ -267,6 +274,6 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
     <script src="owl-carousel/owl.carousel.min.js"></script>
-    <script src="js/fatou-b-ceesay.js"></script>
+    <script src="js/general.js"></script>
   </body>
 </html>
