--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,10 @@
     <meta name="author" content="Steps Keita" />
     <meta property="og:title" content="FA2BEE" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="img/logo.png" />
+    <meta
+      property="og:image"
+      content="https://peaceful-muffin-848fc4.netlify.app/img/logo.png"
+    />
     <meta
       property="og:url"
       content="https://peaceful-muffin-848fc4.netlify.app/"
@@ -72,7 +75,9 @@
         </div>
         <!-- sidenav content -->
         <div class="p-2 flex flex-col sideNavContent">
-          <a href="#top" class="p-2 px-3 text-sm block w-full nav-link">Home</a>
+          <a href="#top" class="p-2 px-3 text-sm block w-full nav-link active"
+            >Home</a
+          >
           <a href="#aboutus" class="p-2 px-3 text-sm block w-full nav-link"
             >About</a
           >
@@ -99,12 +104,12 @@
       <div class="hidden xl:flex items-center text-white">
         <a
           href="#top"
-          class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 nav-link"
+          class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 nav-link active"
           >Home</a
         >
         <a
           href="#aboutus"
-          class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 nav-link active"
+          class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 nav-link"
           >About</a
         >
         <a
@@ -268,7 +273,7 @@
         >
           <div class="item flex flex-col lg:flex-row lg:items-stretch">
             <div class="w-full lg:w-2/5 h-64 lg:h-80">
-              <a href="" class="h-full w-full">
+              <a href="about.html" class="h-full w-full">
                 <img
                   src="img/logo-white.png"
                   class="w-full h-full object-scale-down"
@@ -294,7 +299,7 @@
               </p>
 
               <a
-                href=""
+                href="about.html"
                 class="block mt-3 w-fit rounded-3xl hover:bg-customBlack hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
                 data-wow-duration="7s"
                 data-wow-delay="5s"
@@ -305,7 +310,7 @@
           </div>
           <div class="item flex flex-col lg:flex-row lg:items-stretch">
             <div class="w-full lg:w-2/5 h-64 lg:h-80">
-              <a href="" class="h-full w-full">
+              <a href="fatou-b-ceesay.html" class="h-full w-full">
                 <img
                   src="img/fatou-b/keeping-warm-no-bg.png"
                   class="w-full h-full object-scale-down"
@@ -361,7 +366,7 @@
         ></div>
 
         <a
-          href=""
+          href="services.html"
           class="block mt-3 w-fit rounded-3xl hover:bg-customBlack mx-auto hover:text-beeYellow hover:border hover:border-beeYellow transition-colors duration-500 bg-beeYellow text-customBlack py-3 px-7 text-sm animate__animated animate__slideInUp"
           data-wow-duration="7s"
           data-wow-delay="5s"
